feat: IIDX25 wine patches

--- a/ballerz.html
+++ b/ballerz.html
@@ -10,6 +10,20 @@
         new PatchContainer([
           new Patcher('bm2dx.dll', "2018-09-19", [
             {
+              name: "Wine fixes",
+              tooltip : "Disables in-game effector and video playback",
+              patches: [
+                // effector
+                { offset: 0x168d17, off: [0x48, 0x85, 0xC0, 0x0F, 0x84, 0x98, 0x00, 0x00, 0x00], on: [0x90, 0x90, 0x90, 0x48, 0xE9, 0x98, 0x00, 0x00, 0x00] },
+                { offset: 0x1689d7, off: [0x48, 0x85, 0xC0, 0x0F, 0x84, 0x98, 0x00, 0x00, 0x00], on: [0x90, 0x90, 0x90, 0x48, 0xE9, 0x98, 0x00, 0x00, 0x00] },
+                { offset: 0x169057, off: [0x48, 0x85, 0xC0, 0x0F, 0x84, 0x98, 0x00, 0x00, 0x00], on: [0x90, 0x90, 0x90, 0x48, 0xE9, 0x98, 0x00, 0x00, 0x00] },
+                { offset: 0x1691f7, off: [0x48, 0x85, 0xC0, 0x0F, 0x84, 0x98, 0x00, 0x00, 0x00], on: [0x90, 0x90, 0x90, 0x48, 0xE9, 0x98, 0x00, 0x00, 0x00] },
+                // winmm.dll crashes
+                { offset: 0x15c670, off: [0xFF, 0x15, 0xCA, 0xF4, 0x05, 0x00], on: [0x90, 0x90, 0x90, 0x90, 0x90, 0x90] },
+                { offset: 0x180e15, off: [0xff, 0x50, 0x68, 0x89, 0x44, 0x24, 0x30, 0x85, 0xc0, 0x79, 0x0e], on: [0x31, 0xc0, 0xff, 0xc0, 0x89, 0x44, 0x24, 0x30, 0x90, 0xeb, 0x0e] },
+              ],
+            },
+            {
               // discovered by GHYAKIMA
               name: 'SSE4.2 Fix',
               tooltip : "This will allow the game to run on processors which do not support the SSE4.2 instruction set. If you can successfully boot the game, do NOT check this.",
