refactor: Cleanup iidx

--- a/bistrover.html
+++ b/bistrover.html
@@ -409,6 +409,6 @@
     </script>
   </head>
   <body>
-    <h1>Beatmania IIDX Bistrover</h1>
+    <h1>Beatmania IIDX 28 Bistrover</h1>
   </body>
 </html>
