--- a/casthour.html
+++ b/casthour.html
@@ -413,6 +413,6 @@
     </script>
   </head>
   <body>
-    <h1>Beatmania IIDX CastHour</h1>
+    <h1>Beatmania IIDX 29 CastHour</h1>
   </body>
 </html>
