--- a/ballerz.html
+++ b/ballerz.html
@@ -1,261 +1,213 @@
 <!DOCTYPE html>
-<html lang='en'>
-<head>
-    <meta charset='utf-8'>
-    <title>IIDX CANNON BALLERS DLL Modder</title>
-    <link rel='stylesheet' href='css/style.css'>
-    <script type='text/javascript' src='js/dllpatcher.js'></script>
-    <script type='text/javascript'>
-      window.addEventListener('load', function () {
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Patch IIDX Cannon Ballers</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <script type="text/javascript" src="js/dllpatcher.js"></script>
+    <script type="text/javascript">
+      window.addEventListener("load", function () {
         new PatchContainer([
-          new Patcher('bm2dx.dll', "2018-09-19", [
+          new Patcher("bm2dx.dll", "2018-09-19", [
             {
               name: "Wine fixes",
-              tooltip : "Disables in-game effector and video playback",
+              tooltip: "Disables in-game effector and video playback",
               patches: [
                 // effector
-                { offset: 0x168d17, off: [0x48, 0x85, 0xC0, 0x0F, 0x84, 0x98, 0x00, 0x00, 0x00], on: [0x90, 0x90, 0x90, 0x48, 0xE9, 0x98, 0x00, 0x00, 0x00] },
-                { offset: 0x1689d7, off: [0x48, 0x85, 0xC0, 0x0F, 0x84, 0x98, 0x00, 0x00, 0x00], on: [0x90, 0x90, 0x90, 0x48, 0xE9, 0x98, 0x00, 0x00, 0x00] },
-                { offset: 0x169057, off: [0x48, 0x85, 0xC0, 0x0F, 0x84, 0x98, 0x00, 0x00, 0x00], on: [0x90, 0x90, 0x90, 0x48, 0xE9, 0x98, 0x00, 0x00, 0x00] },
-                { offset: 0x1691f7, off: [0x48, 0x85, 0xC0, 0x0F, 0x84, 0x98, 0x00, 0x00, 0x00], on: [0x90, 0x90, 0x90, 0x48, 0xE9, 0x98, 0x00, 0x00, 0x00] },
+                { offset: 0x168d17, off: [0x48, 0x85, 0xc0, 0x0f, 0x84, 0x98, 0x00, 0x00, 0x00], on: [0x90, 0x90, 0x90, 0x48, 0xe9, 0x98, 0x00, 0x00, 0x00] },
+                { offset: 0x1689d7, off: [0x48, 0x85, 0xc0, 0x0f, 0x84, 0x98, 0x00, 0x00, 0x00], on: [0x90, 0x90, 0x90, 0x48, 0xe9, 0x98, 0x00, 0x00, 0x00] },
+                { offset: 0x169057, off: [0x48, 0x85, 0xc0, 0x0f, 0x84, 0x98, 0x00, 0x00, 0x00], on: [0x90, 0x90, 0x90, 0x48, 0xe9, 0x98, 0x00, 0x00, 0x00] },
+                { offset: 0x1691f7, off: [0x48, 0x85, 0xc0, 0x0f, 0x84, 0x98, 0x00, 0x00, 0x00], on: [0x90, 0x90, 0x90, 0x48, 0xe9, 0x98, 0x00, 0x00, 0x00] },
                 // winmm.dll crashes
-                { offset: 0x15c670, off: [0xFF, 0x15, 0xCA, 0xF4, 0x05, 0x00], on: [0x90, 0x90, 0x90, 0x90, 0x90, 0x90] },
+                { offset: 0x15c670, off: [0xff, 0x15, 0xca, 0xf4, 0x05, 0x00], on: [0x90, 0x90, 0x90, 0x90, 0x90, 0x90] },
                 { offset: 0x180e15, off: [0xff, 0x50, 0x68, 0x89, 0x44, 0x24, 0x30, 0x85, 0xc0, 0x79, 0x0e], on: [0x31, 0xc0, 0xff, 0xc0, 0x89, 0x44, 0x24, 0x30, 0x90, 0xeb, 0x0e] },
               ],
             },
             {
               // discovered by GHYAKIMA
-              name: 'SSE4.2 Fix',
-              tooltip : "This will allow the game to run on processors which do not support the SSE4.2 instruction set. If you can successfully boot the game, do NOT check this.",
-              patches: [{offset: 0x169667, off: [0xF3, 0x45, 0x0F], on: [0x90, 0x90, 0x90]}]
+              name: "SSE4.2 Fix",
+              tooltip: "This will allow the game to run on processors which do not support the SSE4.2 instruction set. If you can successfully boot the game, do NOT check this.",
+              patches: [{ offset: 0x169667, off: [0xf3, 0x45, 0x0f], on: [0x90, 0x90, 0x90] }],
             },
             {
               // ported by Xyen
-              name: 'Unlock All Songs',
-              patches: [{offset: 0xB60B2, off: [0x74, 0x10], on: [0x90, 0x90]}]
+              name: "Unlock All Songs",
+              patches: [{ offset: 0xb60b2, off: [0x74, 0x10], on: [0x90, 0x90] }],
             },
             {
               // ported by a machine
-              name: 'Unlock All 12s',
-              patches: [{offset: 0xB5FB0, off: [0x83, 0xFF, 0x02, 0x74, 0x05, 0x83, 0xFF, 0x05], on: [0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90]}]
+              name: "Unlock All 12s",
+              patches: [{ offset: 0xb5fb0, off: [0x83, 0xff, 0x02, 0x74, 0x05, 0x83, 0xff, 0x05], on: [0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90] }],
             },
             {
               // ported by Iemnok?
-              name: 'Skip CAMERA DEVICE ERROR prompt',
-              patches: [{offset: 0x10C5FB, off: [0x84], on: [0x81]}]
+              name: "Skip CAMERA DEVICE ERROR prompt",
+              patches: [{ offset: 0x10c5fb, off: [0x84], on: [0x81] }],
             },
             {
               // ported by Xyen
-              name: '1P Premium Free',
-              patches: [{offset: 0xDC819, off: [0x75, 0x14], on: [0xEB, 0x14]}]
+              name: "1P Premium Free",
+              patches: [{ offset: 0xdc819, off: [0x75, 0x14], on: [0xeb, 0x14] }],
             },
             {
               // ported by a machine
-              name: '2P Premium Free',
+              name: "2P Premium Free",
               patches: [
-                {offset: 0xDC9B2, off: [0x74, 0x6C], on: [0x90, 0x90]},
-                {offset: 0xDC9C8, off: [0x74, 0x56], on: [0x90, 0x90]}
-              ]
+                { offset: 0xdc9b2, off: [0x74, 0x6c], on: [0x90, 0x90] },
+                { offset: 0xdc9c8, off: [0x74, 0x56], on: [0x90, 0x90] },
+              ],
             },
             {
               // ported by Xyen
-              name: 'Premium Free Timer Freeze',
-              patches: [{offset: 0xB89BD, off: [0xFF, 0xC8], on: [0x90, 0x90]}]
+              name: "Premium Free Timer Freeze",
+              patches: [{ offset: 0xb89bd, off: [0xff, 0xc8], on: [0x90, 0x90] }],
             },
             {
               // ported by Zelminar
-              name: 'Standard/Menu Timer Freeze',
-              patches: [{offset: 0x1237E7, off: [0x74], on: [0xEB]}]
+              name: "Standard/Menu Timer Freeze",
+              patches: [{ offset: 0x1237e7, off: [0x74], on: [0xeb] }],
             },
             {
               // ported by Zelminar
-              name: '90sec Music Select Timer',
-              tooltip : "Make sure your Select Time option is set to \"45 SEC\" in the Game Options for this to work!",
-              patches: [{offset: 0x5DDA5, off: [0x2D], on: [0x5A]}]
+              name: "90sec Music Select Timer",
+              tooltip: 'Make sure your Select Time option is set to "45 SEC" in the Game Options for this to work!',
+              patches: [{ offset: 0x5dda5, off: [0x2d], on: [0x5a] }],
             },
             {
               // ported by Xyen
-              name: 'Cursor lock',
-              tooltip : "After song finishes, song select remains on previous song",
-              patches: [{offset: 0xDF93C, off: [0x74, 0x1D], on: [0x90, 0x90]}]
+              name: "Cursor lock",
+              tooltip: "After song finishes, song select remains on previous song",
+              patches: [{ offset: 0xdf93c, off: [0x74, 0x1d], on: [0x90, 0x90] }],
             },
             {
               // ported by Xyen
-              name: 'CS-Style Song Start Delay',
-              tooltip : "Holding Start will pause the song at the beginning until you release it",
-              patches: [{offset: 0xF5CAA, off: [0x7D, 0x25], on: [0x90, 0x90]}]
+              name: "CS-Style Song Start Delay",
+              tooltip: "Holding Start will pause the song at the beginning until you release it",
+              patches: [{ offset: 0xf5caa, off: [0x7d, 0x25], on: [0x90, 0x90] }],
             },
             {
               // discovered by dogelition_man with some help from zelminar
-              name: 'Play video preview on all songs',
-              tooltip : "By default, only some songs in the beginner folder show a BGA preview on the music select screen. This edit extends this function to every song in any folder.",
+              name: "Play video preview on all songs",
+              tooltip: "By default, only some songs in the beginner folder show a BGA preview on the music select screen. This edit extends this function to every song in any folder.",
               patches: [
-                {offset: 0x75422, off: [0x74, 0x15], on: [0x90, 0x90]},
-                {offset: 0x7243C, off: [0x0F, 0xB6], on: [0xEB, 0x2F]}
-              ]
+                { offset: 0x75422, off: [0x74, 0x15], on: [0x90, 0x90] },
+                { offset: 0x7243c, off: [0x0f, 0xb6], on: [0xeb, 0x2f] },
+              ],
             },
             {
-              name: 'Hide INSERT COIN[S] text',
-              patches: [{offset : 0x64389, off: [0x1B], on: [0x1A]}]
+              name: "Hide INSERT COIN[S] text",
+              patches: [{ offset: 0x64389, off: [0x1b], on: [0x1a] }],
             },
             {
-              name: 'Hide CREDIT: %d text',
-              patches: [{offset: 0x63F17, off: [0xDD, 0xB8, 0x15, 0x00], on: [0xDC, 0xB8, 0x15, 0x00]}]
+              name: "Hide CREDIT: %d text",
+              patches: [{ offset: 0x63f17, off: [0xdd, 0xb8, 0x15, 0x00], on: [0xdc, 0xb8, 0x15, 0x00] }],
             },
             {
-              name: 'Hide CREDIT: %d COIN %d / %d text',
-              patches: [{offset: 0x63EED, off: [0xE7], on: [0xE6]}],
+              name: "Hide CREDIT: %d COIN %d / %d text",
+              patches: [{ offset: 0x63eed, off: [0xe7], on: [0xe6] }],
             },
             {
-              name: 'Hide EXTRA PASELI: %d text',
-              patches: [{offset: 0x64009, off: [0x13], on: [0x12]}]
+              name: "Hide EXTRA PASELI: %d text",
+              patches: [{ offset: 0x64009, off: [0x13], on: [0x12] }],
             },
             {
-              name: 'Hide PASELI: %d text',
-              patches: [{offset: 0x641D8, off: [0x74], on: [0x73]}]
+              name: "Hide PASELI: %d text",
+              patches: [{ offset: 0x641d8, off: [0x74], on: [0x73] }],
             },
             {
-              name: 'Hide PASELI: NO ACCOUNT text',
-              patches: [{offset: 0x64292, off: [0xFA, 0xB5, 0x15, 0x00], on: [0xF9, 0xB5, 0x15, 0x00]}]
+              name: "Hide PASELI: NO ACCOUNT text",
+              patches: [{ offset: 0x64292, off: [0xfa, 0xb5, 0x15, 0x00], on: [0xf9, 0xb5, 0x15, 0x00] }],
             },
             {
-              name: 'Hide PASELI: ****** text',
-              patches: [{offset: 0x641FB, off: [0x71, 0xB6, 0x15, 0x00], on: [0x70, 0xB6, 0x15, 0x00]}]
-            },
-            {
-              // ported by Zelminar
-              name: 'Free play text to LED ticker (Bottom Right)',
-              tooltip : "Song Title/Ticker information will display instead of FREEPLAY",
-              patches: [{offset: 0x640BF, off: [0x05, 0xB7, 0x15, 0x00], on: [0xD9, 0x68, 0x44, 0x02]}]
+              name: "Hide PASELI: ****** text",
+              patches: [{ offset: 0x641fb, off: [0x71, 0xb6, 0x15, 0x00], on: [0x70, 0xb6, 0x15, 0x00] }],
             },
             {
               // ported by Zelminar
-              name: 'LED Ticker (Top Left)',
-              tooltip : "This does NOT require FREEPLAY on",
+              name: "Free play text to LED ticker (Bottom Right)",
+              tooltip: "Song Title/Ticker information will display instead of FREEPLAY",
+              patches: [{ offset: 0x640bf, off: [0x05, 0xb7, 0x15, 0x00], on: [0xd9, 0x68, 0x44, 0x02] }],
+            },
+            {
+              // ported by Zelminar
+              name: "LED Ticker (Top Left)",
+              tooltip: "This does NOT require FREEPLAY on",
               patches: [
-                {offset: 0x10A800, off: [0x1C, 0x73, 0x15, 0x00], on: [0x98, 0x01, 0x3A, 0x02]},
-                {offset: 0x10A9D8, off: [0x74, 0x3C], on: [0x90, 0x90]}
-              ]
+                { offset: 0x10a800, off: [0x1c, 0x73, 0x15, 0x00], on: [0x98, 0x01, 0x3a, 0x02] },
+                { offset: 0x10a9d8, off: [0x74, 0x3c], on: [0x90, 0x90] },
+              ],
             },
             {
               // ported by Zelminar
-              name: 'Dark Mode',
-              tooltip : "Removes frame assets from playfield during song",
-              patches: [{offset: 0xEB231, off: [0x74, 0x4B], on: [0x90, 0x90]}]
+              name: "Dark Mode",
+              tooltip: "Removes frame assets from playfield during song",
+              patches: [{ offset: 0xeb231, off: [0x74, 0x4b], on: [0x90, 0x90] }],
             },
             {
               // ported by Zelminar
               // discovered by dogelition_man
-              name: 'Disable Bar Lines',
-              tooltip : "Removes white measure bars during song. Great with Dark Mode.",
-              patches: [{offset: 0x8AE8B, off: [0x75], on: [0xEB]}]
+              name: "Disable Bar Lines",
+              tooltip: "Removes white measure bars during song. Great with Dark Mode.",
+              patches: [{ offset: 0x8ae8b, off: [0x75], on: [0xeb] }],
             },
             {
               // ported by Zelminar
-              name: 'Remove Song Select Color Banners',
+              name: "Remove Song Select Color Banners",
               patches: [
-                {offset: 0x1C5395, off: [0x5F], on: [0x00]},
-                {offset: 0x1C53A5, off: [0x5F], on: [0x00]},
-                {offset: 0x1C53B5, off: [0x5F], on: [0x00]},
-                {offset: 0x1C53C5, off: [0x5F], on: [0x00]}
-              ]
+                { offset: 0x1c5395, off: [0x5f], on: [0x00] },
+                { offset: 0x1c53a5, off: [0x5f], on: [0x00] },
+                { offset: 0x1c53b5, off: [0x5f], on: [0x00] },
+                { offset: 0x1c53c5, off: [0x5f], on: [0x00] },
+              ],
             },
             {
               // ported by Zelminar
-              name: 'Quick Retry',
-              tooltip : "Guest or non-VIP Card Players - Hold VEFX and Effect during a song to quick restart",
-              patches: [{offset: 0xA3FFF, off: [0x32, 0xC0], on: [0xB0, 0x01]}]
+              name: "Quick Retry",
+              tooltip: "Guest or non-VIP Card Players - Hold VEFX and Effect during a song to quick restart",
+              patches: [{ offset: 0xa3fff, off: [0x32, 0xc0], on: [0xb0, 0x01] }],
             },
             {
               // ported by Zelminar
-              name: 'Debug Mode',
-              tooltip : "While in game, press F1 to enable menu.  (Disables Profile/Score saving)",
-              patches: [{offset: 0x660D0, off: [0x32, 0xC0], on: [0x0C, 0x01]}]
+              name: "Debug Mode",
+              tooltip: "While in game, press F1 to enable menu.  (Disables Profile/Score saving)",
+              patches: [{ offset: 0x660d0, off: [0x32, 0xc0], on: [0x0c, 0x01] }],
             },
             {
               // ported by Zelminar
-              name: 'Skip Card Entry',
-              tooltip : "Useful for those without service or wish to prevent login",
-              patches: [{offset: 0xC06EF, off: [0x32], on: [0x20]}]
+              name: "Skip Card Entry",
+              tooltip: "Useful for those without service or wish to prevent login",
+              patches: [{ offset: 0xc06ef, off: [0x32], on: [0x20] }],
             },
             {
               // ported by Zelminar
-              name: 'Expert Course Force Open (in offline or local mode)',
-              patches: [{offset: 0xDC953, off: [0x75], on: [0xEB]}]
+              name: "Expert Course Force Open (in offline or local mode)",
+              patches: [{ offset: 0xdc953, off: [0x75], on: [0xeb] }],
             },
             {
-                //by nibs
-                name: "Shorter monitor check",
-                tooltip: "Runs for 300 frames (5 seconds) instead of 1200 (20 seconds), recommended only if you have a very stable framerate",
-                patches: [{offset: 0x104305, off: [0xB0, 0x04], on: [0x2C, 0x01]}]
+              //by nibs
+              name: "Shorter monitor check",
+              tooltip: "Runs for 300 frames (5 seconds) instead of 1200 (20 seconds), recommended only if you have a very stable framerate",
+              patches: [{ offset: 0x104305, off: [0xb0, 0x04], on: [0x2c, 0x01] }],
             },
             {
-                //by nibs
-                name: "6 digits in monitor check",
-                tooltip: "Purely visual, does not affect anything besides the FPS display",
-                //changes the FPS = %2.4f string to FPS = %2.6f
-                patches: [{offset: 0x25FD41, off: [0x34], on: [0x36]}]
+              //by nibs
+              name: "6 digits in monitor check",
+              tooltip: "Purely visual, does not affect anything besides the FPS display",
+              //changes the FPS = %2.4f string to FPS = %2.6f
+              patches: [{ offset: 0x25fd41, off: [0x34], on: [0x36] }],
             },
             {
               // by aixxe
-              name: 'Skip decide screen',
-              tooltip : "Immediately loads into chart after selection.",
-              patches: [{offset: 0x72775, off: [0xE8, 0x66, 0x00, 0x00, 0x00], on: [0x90, 0x90, 0x90, 0x90, 0x90]}]
-            },
-          ]),
-          new Patcher('bm2dx.dll', "2018-07-24", [
-            {
-              name: 'Unlock All Songs',
-              patches: [{offset: 0xB61D2, off: [0x74, 0x10], on: [0x90, 0x90]}]
-            },
-            {
-              name: 'Premium Free',
-              patches: [{offset: 0xDC949, off: [0x75, 0x14], on: [0xEB, 0x14]}]
-            },
-            {
-              name: 'Premium Free Timer Freeze',
-              patches: [{offset: 0xB8ADD, off: [0xFF, 0xC8], on: [0x90, 0x90]}]
-            },
-            {
-              name: 'Cursor lock',
-              tooltip : "After song finishes, song select remains on previous song",
-              patches: [{offset: 0xDFA2C, off: [0x74, 0x1D], on: [0x90, 0x90]}]
-            },
-            {
-              name: 'CS-Style Song Start Delay',
-              tooltip : "Holding Start will pause the song at the beginning until you release it",
-              patches: [{offset: 0xF5D9A, off: [0x7D, 0x25], on: [0x90, 0x90]}]
-            },
-          ]),
-          new Patcher('bm2dx.dll', "2018-06-13", [
-            {
-              name: 'Unlock All Songs',
-              patches: [{offset: 0xB42D2, off: [0x74, 0x10], on: [0x90, 0x90]}]
-            },
-            {
-              name: 'Premium Free',
-              patches: [{offset: 0xDA3C9, off: [0x75, 0x14], on: [0xEB, 0x14]}]
-            },
-            {
-              name: 'Premium Free Timer Freeze',
-              patches: [{offset: 0xB682D, off: [0xFF, 0xC8], on: [0x90, 0x90]}]
-            },
-            {
-              name: 'Cursor lock',
-              tooltip : "After song finishes, song select remains on previous song",
-              patches: [{offset: 0xDD4AC, off: [0x74, 0x1D], on: [0x90, 0x90]}]
-            },
-            {
-              name: 'CS-Style Song Start Delay',
-              tooltip : "Holding Start will pause the song at the beginning until you release it",
-              patches: [{offset: 0xF296A, off: [0x7D, 0x25], on: [0x90, 0x90]}]
+              name: "Skip decide screen",
+              tooltip: "Immediately loads into chart after selection.",
+              patches: [{ offset: 0x72775, off: [0xe8, 0x66, 0x00, 0x00, 0x00], on: [0x90, 0x90, 0x90, 0x90, 0x90] }],
             },
           ]),
         ]);
       });
     </script>
-</head>
-<body>
-<h1>IIDX CANNON BALLERS DLL Modder</h1>
-</body>
+  </head>
+  <body>
+    <h1>Beatmania IIDX 25 Cannon Ballers</h1>
+  </body>
 </html>
