--- a/pendual.html
+++ b/pendual.html
@@ -2,27 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>IIDX PENDUAL DLL Modder</title>
+        <title>Patch IIDX Pendual</title>
         <link rel="stylesheet" href="css/style.css">
         <script type="text/javascript" src="js/dllpatcher.js"></script>
         <script type="text/javascript">
             window.addEventListener("load", function() {
                 new PatchContainer([
-                    new Patcher('bm2dx.dll', "2014-09-17", [
-                        {
-                            //by nibs
-                            name: "Shorter monitor check",
-                            tooltip: "Runs for 300 frames (5 seconds) instead of 1200 (20 seconds), recommended only if you have a very stable framerate",
-                            patches: [{offset: 0x6D5EA, off: [0xB0, 0x04], on: [0x2C, 0x01]}]
-                        },
-                        {
-                            //by nibs
-                            name: "6 digits in monitor check",
-                            tooltip: "Purely visual, does not affect anything besides the FPS display",
-                            //changes the FPS = %2.4f string to FPS = %2.6f
-                            patches: [{offset: 0x14E2AD, off: [0x34], on: [0x36]}]
-                        },
-                    ]),
                     new Patcher('bm2dx.dll', "2015-08-05", [
                         {
                             name: "Timer Freeze",
@@ -111,6 +96,6 @@
         </script>
     </head>
     <body>
-        <h1>IIDX PENDUAL DLL Modder</h1>
+        <h1>Beatmania IIDX 22 Pendual</h1>
     </body>
 </html>
