--- a/rootage.html
+++ b/rootage.html
@@ -1,289 +1,149 @@
 ﻿<!DOCTYPE html>
-<html lang='en'>
-<head>
-    <meta charset='utf-8'>
-    <title>IIDX Rootage DLL Modder</title>
-    <link rel='stylesheet' href='css/style.css'>
-    <script type='text/javascript' src='js/dllpatcher.js'></script>
-    <script type='text/javascript'>
-      window.addEventListener('load', function () {
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Patch IIDX Rootage</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <script type="text/javascript" src="js/dllpatcher.js"></script>
+    <script type="text/javascript">
+      window.addEventListener("load", function () {
         new PatchContainer([
-          new Patcher('bm2dx.dll', "2019-01-23", [
+          new Patcher("bm2dx.dll", "2019-09-02", [
             {
-              name: 'Unlock All Songs',
-              patches: [{offset: 0x1609C2, off: [0x74, 0x10], on: [0x90, 0x90]}]
-            },
-            {
-              name: 'Premium Free',
-              patches: [{offset: 0x31DB97, off: [0x75, 0x14], on: [0xEB, 0x14]}]
-            },
-            {
-              name: 'Premium Free Timer Freeze',
-              patches: [{offset: 0x16294D, off: [0xFF, 0xC8], on: [0x90, 0x90]}]
-            },
-            {
-              name: 'Cursor lock',
-              tooltip : "After song finishes, song select remains on previous song",
-              patches: [{offset: 0x322DC4, off: [0x74, 0x1D], on: [0x90, 0x90]}]
-            },
-            {
-              name: 'CS-Style Song Start Delay',
-              tooltip : "Holding Start will pause the song at the beginning until you release it",
-              patches: [{offset: 0x33DF5A, off: [0x7D, 0x25], on: [0x90, 0x90]}]
-            },
-          ]),
-          new Patcher('bm2dx.dll', "2019-02-20", [
-            {
-              name: 'Unlock All Songs',
-              patches: [{offset: 0x161462, off: [0x74, 0x10], on: [0x90, 0x90]}]
-            },
-            {
-              name: 'Premium Free Timer Freeze',
-              patches: [{offset: 0x16366D, off: [0xFF, 0xC8], on: [0x90, 0x90]}]
-            },
-          ]),
-          new Patcher('bm2dx.dll', "2019-06-03", [
-            {
-              name: 'Unlock All Songs',
-              patches: [{offset: 0x16C412, off: [0x74, 0x10], on: [0x90, 0x90]}]
-            },
-            {
-              name: 'Premium Free Timer Freeze',
-              patches: [{offset: 0x16E6ED, off: [0xFF, 0xC8], on: [0x90, 0x90]}]
-            },
-          ]),
-          new Patcher('bm2dx.dll', "2019-09-02", [
-            {
-              name: 'SSE4.2 Fix',
-              tooltip : "This will allow the game to run on processors which do not support the SSE4.2 instruction set. If you can successfully boot the game, do NOT check this.",
-              patches: [{offset: 0x3F8C77, off: [0xF3, 0x45, 0x0F], on: [0x90, 0x90, 0x90]}]
-            },
-            {
-              name: 'Unlock All Songs',
-              patches: [{offset: 0x16D7B2, off: [0x74, 0x10], on: [0x90, 0x90]}]
-            },
-            {
-              name: 'Unlock All 12s',
-              patches: [{offset: 0x16D660, off: [0x83, 0xFF, 0x02, 0x74, 0x05, 0x83, 0xFF, 0x05], on: [0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90]}]
-            },
-            {
-              name: 'Skip CAMERA DEVICE ERROR prompt',
-              patches: [{offset: 0x36F37B, off: [0x84], on: [0x81]}]
-            },
-            {
-              name: '1P Premium Free',
-              patches: [{offset: 0x32F5C7, off: [0x75, 0x14], on: [0xEB, 0x14]}]
-            },
-            {
-              name: '2P Premium Free',
+              name: "Wine fixes",
+              tooltip : "Disables in-game effector and video playback",
               patches: [
-                {offset: 0x32F765, off: [0x74, 0x55], on: [0x90, 0x90]},
-                {offset: 0x32F77B, off: [0x74, 0x3F], on: [0x90, 0x90]}
-              ]
+                // effector
+                { offset: 0x3f8327, off: [0x48, 0x85, 0xC0, 0x0F, 0x84, 0x98, 0x00, 0x00, 0x00], on: [0x90, 0x90, 0x90, 0x48, 0xE9, 0x98, 0x00, 0x00, 0x00] },
+                { offset: 0x3f7fe7, off: [0x48, 0x85, 0xC0, 0x0F, 0x84, 0x98, 0x00, 0x00, 0x00], on: [0x90, 0x90, 0x90, 0x48, 0xE9, 0x98, 0x00, 0x00, 0x00] },
+                { offset: 0x3f8667, off: [0x48, 0x85, 0xC0, 0x0F, 0x84, 0x98, 0x00, 0x00, 0x00], on: [0x90, 0x90, 0x90, 0x48, 0xE9, 0x98, 0x00, 0x00, 0x00] },
+                { offset: 0x3f8807, off: [0x48, 0x85, 0xC0, 0x0F, 0x84, 0x98, 0x00, 0x00, 0x00], on: [0x90, 0x90, 0x90, 0x48, 0xE9, 0x98, 0x00, 0x00, 0x00] },
+                // winmm.dll crashes
+                { offset: 0x3ebfc0, off: [0xFF, 0x15, 0x8A, 0x3B, 0x06, 0x00], on: [0x90, 0x90, 0x90, 0x90, 0x90, 0x90] },
+                { offset: 0x4119d2, off: [0x41, 0xFF, 0x51, 0x68], on: [0x90, 0x90, 0x90, 0x90] },
+                { offset: 0x411d25, off: [0xff, 0x50, 0x68, 0x89, 0x44, 0x24, 0x30, 0x85, 0xc0, 0x79, 0x0e], on: [0x31, 0xc0, 0xff, 0xc0, 0x89, 0x44, 0x24, 0x30, 0x90, 0xeb, 0x0e] },
+              ],
             },
             {
-              name: 'Premium Free Timer Freeze',
-              patches: [{offset: 0x16FCAD, off: [0xFF, 0xC8], on: [0x90, 0x90]}]
+              name: "SSE4.2 Fix",
+              tooltip: "This will allow the game to run on processors which do not support the SSE4.2 instruction set. If you can successfully boot the game, do NOT check this.",
+              patches: [{ offset: 0x3f8c77, off: [0xf3, 0x45, 0x0f], on: [0x90, 0x90, 0x90] }],
             },
             {
-              name: 'Standard/Menu Timer Freeze',
-              patches: [{offset: 0x387EB7, off: [0x74], on: [0xEB]}]
+              name: "Unlock All Songs",
+              patches: [{ offset: 0x16d7b2, off: [0x74, 0x10], on: [0x90, 0x90] }],
             },
             {
-              name: 'Cursor lock',
-              tooltip : "After song finishes, song select remains on previous song",
-              patches: [{offset: 0x334914, off: [0x74, 0x1D], on: [0x90, 0x90]}]
+              name: "Unlock All 12s",
+              patches: [{ offset: 0x16d660, off: [0x83, 0xff, 0x02, 0x74, 0x05, 0x83, 0xff, 0x05], on: [0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90] }],
             },
             {
-              name: 'CS-Style Song Start Delay',
-              tooltip : "Holding Start will pause the song at the beginning until you release it",
-              patches: [{offset: 0x35396A, off: [0x7D, 0x25], on: [0x90, 0x90]}]
+              name: "Skip CAMERA DEVICE ERROR prompt",
+              patches: [{ offset: 0x36f37b, off: [0x84], on: [0x81] }],
             },
             {
-              name: 'Play video preview on all songs',
-              tooltip : "By default, only some songs in the beginner folder show a BGA preview on the music select screen. This edit extends this function to every song in any folder.",
-                patches: [
-                {offset: 0x11CA4C, off: [0x0F, 0xB6], on: [0xEB, 0x2F]},
-                {offset: 0x11FDFE, off: [0x74, 0x0E], on: [0x90, 0x90]}
-              ]
+              name: "1P Premium Free",
+              patches: [{ offset: 0x32f5c7, off: [0x75, 0x14], on: [0xeb, 0x14] }],
             },
             {
-              name: 'Hide INSERT COIN[S] text',
-              patches: [{offset : 0x107279, off: [0x3B], on: [0x3A]}]
-            },
-            {
-              name: 'Hide CREDIT: %d text',
-              patches: [{offset: 0x106DF8, off: [0x0C], on: [0x0B]}]
-            },
-            {
-              name: 'Hide CREDIT: %d COIN %d / %d text',
-              patches: [{offset: 0x106DCD, off: [0x17], on: [0x16]}],
-            },
-            {
-              name: 'Hide EXTRA PASELI: %d text',
-              patches: [{offset: 0x106EE9, off: [0x43], on: [0x42]}]
-            },
-            {
-              name: 'Hide PASELI: %d text',
-              patches: [{offset: 0x1070B8, off: [0xA4], on: [0xA3]}]
-            },
-            {
-              name: 'Hide PASELI: NO ACCOUNT text',
-              patches: [{offset: 0x10717B, off: [0x21], on: [0x20]}]
-            },
-            {
-              name: 'Hide PASELI: ****** text',
-              patches: [{offset: 0x1070DD, off: [0x9F], on: [0x9E]}]
-            },
-            {
-              name: 'Free play text to LED ticker (Bottom Right)',
-              tooltip : "Song Title/Ticker information will display instead of FREEPLAY",
-              patches: [{offset: 0x106F9F, off: [0x35, 0x2F, 0x35, 0x00], on: [0x59, 0x61, 0x03, 0x03]}]
-            },
-            {
-              name: 'LED Ticker (Top Left)',
-              tooltip : "This does NOT require FREEPLAY on",
+              name: "2P Premium Free",
               patches: [
-                {offset: 0x36D700, off: [0x7C, 0xBA, 0x1C, 0x00], on: [0x98, 0x01, 0x3A, 0x02]},
-                {offset: 0x36D8D8, off: [0x74, 0x3C], on: [0x90, 0x90]}
-              ]
+                { offset: 0x32f765, off: [0x74, 0x55], on: [0x90, 0x90] },
+                { offset: 0x32f77b, off: [0x74, 0x3f], on: [0x90, 0x90] },
+              ],
             },
             {
-              name: 'Quick Retry',
-              tooltip : "Guest or non-VIP Card Players - Hold VEFX and Effect during a song to quick restart",
-              patches: [{offset: 0x1583BF, off: [0x32, 0xC0], on: [0xB0, 0x01]}]
+              name: "Premium Free Timer Freeze",
+              patches: [{ offset: 0x16fcad, off: [0xff, 0xc8], on: [0x90, 0x90] }],
             },
             {
-              name: 'Expert Course Force Open (in offline or local mode)',
-              patches: [{offset: 0x32F711, off: [0x75], on: [0xEB]}]
+              name: "Standard/Menu Timer Freeze",
+              patches: [{ offset: 0x387eb7, off: [0x74], on: [0xeb] }],
+            },
+            {
+              name: "Cursor lock",
+              tooltip: "After song finishes, song select remains on previous song",
+              patches: [{ offset: 0x334914, off: [0x74, 0x1d], on: [0x90, 0x90] }],
+            },
+            {
+              name: "CS-Style Song Start Delay",
+              tooltip: "Holding Start will pause the song at the beginning until you release it",
+              patches: [{ offset: 0x35396a, off: [0x7d, 0x25], on: [0x90, 0x90] }],
+            },
+            {
+              name: "Play video preview on all songs",
+              tooltip: "By default, only some songs in the beginner folder show a BGA preview on the music select screen. This edit extends this function to every song in any folder.",
+              patches: [
+                { offset: 0x11ca4c, off: [0x0f, 0xb6], on: [0xeb, 0x2f] },
+                { offset: 0x11fdfe, off: [0x74, 0x0e], on: [0x90, 0x90] },
+              ],
+            },
+            {
+              name: "Hide INSERT COIN[S] text",
+              patches: [{ offset: 0x107279, off: [0x3b], on: [0x3a] }],
+            },
+            {
+              name: "Hide CREDIT: %d text",
+              patches: [{ offset: 0x106df8, off: [0x0c], on: [0x0b] }],
+            },
+            {
+              name: "Hide CREDIT: %d COIN %d / %d text",
+              patches: [{ offset: 0x106dcd, off: [0x17], on: [0x16] }],
+            },
+            {
+              name: "Hide EXTRA PASELI: %d text",
+              patches: [{ offset: 0x106ee9, off: [0x43], on: [0x42] }],
+            },
+            {
+              name: "Hide PASELI: %d text",
+              patches: [{ offset: 0x1070b8, off: [0xa4], on: [0xa3] }],
+            },
+            {
+              name: "Hide PASELI: NO ACCOUNT text",
+              patches: [{ offset: 0x10717b, off: [0x21], on: [0x20] }],
+            },
+            {
+              name: "Hide PASELI: ****** text",
+              patches: [{ offset: 0x1070dd, off: [0x9f], on: [0x9e] }],
+            },
+            {
+              name: "Free play text to LED ticker (Bottom Right)",
+              tooltip: "Song Title/Ticker information will display instead of FREEPLAY",
+              patches: [{ offset: 0x106f9f, off: [0x35, 0x2f, 0x35, 0x00], on: [0x59, 0x61, 0x03, 0x03] }],
+            },
+            {
+              name: "LED Ticker (Top Left)",
+              tooltip: "This does NOT require FREEPLAY on",
+              patches: [
+                { offset: 0x36d700, off: [0x7c, 0xba, 0x1c, 0x00], on: [0x98, 0x01, 0x3a, 0x02] },
+                { offset: 0x36d8d8, off: [0x74, 0x3c], on: [0x90, 0x90] },
+              ],
+            },
+            {
+              name: "Quick Retry",
+              tooltip: "Guest or non-VIP Card Players - Hold VEFX and Effect during a song to quick restart",
+              patches: [{ offset: 0x1583bf, off: [0x32, 0xc0], on: [0xb0, 0x01] }],
+            },
+            {
+              name: "Expert Course Force Open (in offline or local mode)",
+              patches: [{ offset: 0x32f711, off: [0x75], on: [0xeb] }],
             },
             {
               name: "Shorter monitor check",
               tooltip: "Runs for 120 frames (2 seconds) instead of 1200 (20 seconds), recommended only if you have a very stable framerate",
-              patches: [{offset: 0x366DEC, off: [0xB0, 0x04], on: [0x78, 0x00]}]
+              patches: [{ offset: 0x366dec, off: [0xb0, 0x04], on: [0x78, 0x00] }],
             },
             {
               name: "Shorter Arena timeout",
               tooltip: "Reduce time before CPUs fill empty slots in online lobbies from 1m5s to 30s. Only takes effect if you are the host.",
-              patches: [{offset: 0x37FE54, off: [0x3C, 0x0F], on: [0x08, 0x07]}]
-            },
-          ]),
-          new Patcher('bm2dx.dll', "2019-10-07", [
-            {
-              name: 'SSE4.2 Fix',
-              tooltip : "This will allow the game to run on processors which do not support the SSE4.2 instruction set. If you can successfully boot the game, do NOT check this.",
-              patches: [{offset: 0x3F8CF7, off: [0xF3, 0x45, 0x0F], on: [0x90, 0x90, 0x90]}]
-            },
-            {
-              name: 'Unlock All Songs',
-              patches: [{offset: 0x16D7B2, off: [0x74, 0x10], on: [0x90, 0x90]}]
-            },
-            {
-              name: 'Unlock All 12s',
-              patches: [{offset: 0x16D660, off: [0x83, 0xFF, 0x02, 0x74, 0x05, 0x83, 0xFF, 0x05], on: [0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90, 0x90]}]
-            },
-            {
-              name: 'Skip CAMERA DEVICE ERROR prompt',
-              patches: [{offset: 0x36F3FB, off: [0x84], on: [0x81]}]
-            },
-            {
-              name: '1P Premium Free',
-              patches: [{offset: 0x32F5C7, off: [0x75, 0x14], on: [0xEB, 0x14]}]
-            },
-            {
-              name: '2P Premium Free',
-              patches: [
-                {offset: 0x32F765, off: [0x74, 0x55], on: [0x90, 0x90]},
-                {offset: 0x32F77B, off: [0x74, 0x3F], on: [0x90, 0x90]}
-              ]
-            },
-            {
-              name: 'Premium Free Timer Freeze',
-              patches: [{offset: 0x16FCAD, off: [0xFF, 0xC8], on: [0x90, 0x90]}]
-            },
-            {
-              name: 'Standard/Menu Timer Freeze',
-              patches: [{offset: 0x387F37, off: [0x74], on: [0xEB]}]
-            },
-            {
-              name: 'Cursor lock',
-              tooltip : "After song finishes, song select remains on previous song",
-              patches: [{offset: 0x334914, off: [0x74, 0x1D], on: [0x90, 0x90]}]
-            },
-            {
-              name: 'CS-Style Song Start Delay',
-              tooltip : "Holding Start will pause the song at the beginning until you release it",
-              patches: [{offset: 0x3539EA, off: [0x7D, 0x25], on: [0x90, 0x90]}]
-            },
-            {
-              name: 'Play video preview on all songs',
-              tooltip : "By default, only some songs in the beginner folder show a BGA preview on the music select screen. This edit extends this function to every song in any folder.",
-                patches: [
-                {offset: 0x11CA4C, off: [0x0F, 0xB6], on: [0xEB, 0x2F]},
-                {offset: 0x11FDFE, off: [0x74, 0x0E], on: [0x90, 0x90]}
-              ]
-            },
-            {
-              name: 'Hide INSERT COIN[S] text',
-              patches: [{offset : 0x107279, off: [0x3B], on: [0x3A]}]
-            },
-            {
-              name: 'Hide CREDIT: %d text',
-              patches: [{offset: 0x106DF8, off: [0x0C], on: [0x0B]}]
-            },
-            {
-              name: 'Hide CREDIT: %d COIN %d / %d text',
-              patches: [{offset: 0x106DCD, off: [0x17], on: [0x16]}],
-            },
-            {
-              name: 'Hide EXTRA PASELI: %d text',
-              patches: [{offset: 0x106EE9, off: [0x43], on: [0x42]}]
-            },
-            {
-              name: 'Hide PASELI: %d text',
-              patches: [{offset: 0x1070B8, off: [0xA4], on: [0xA3]}]
-            },
-            {
-              name: 'Hide PASELI: NO ACCOUNT text',
-              patches: [{offset: 0x10717B, off: [0x21], on: [0x20]}]
-            },
-            {
-              name: 'Hide PASELI: ****** text',
-              patches: [{offset: 0x1070DD, off: [0x9F], on: [0x9E]}]
-            },
-            {
-              name: 'Free play text to LED ticker (Bottom Right)',
-              tooltip : "Song Title/Ticker information will display instead of FREEPLAY",
-              patches: [{offset: 0x106F9F, off: [0x35, 0x2F, 0x35, 0x00], on: [0xD9, 0x68, 0x44, 0x02]}]
-            },
-            {
-              name: 'LED Ticker (Top Left)',
-              tooltip : "This does NOT require FREEPLAY on",
-              patches: [
-                {offset: 0x36D780, off: [0xFC, 0xB9, 0x1C, 0x00], on: [0x98, 0x01, 0x3A, 0x02]},
-                {offset: 0x36D958, off: [0x74, 0x3C], on: [0x90, 0x90]}
-              ]
-            },
-            {
-              name: 'Quick Retry',
-              tooltip : "Guest or non-VIP Card Players - Hold VEFX and Effect during a song to quick restart",
-              patches: [{offset: 0x1583BF, off: [0x32, 0xC0], on: [0xB0, 0x01]}]
-            },
-            {
-              name: 'Expert Course Force Open (in offline or local mode)',
-              patches: [{offset: 0x32F711, off: [0x75], on: [0xEB]}]
-            },
-            {
-              name: "Shorter monitor check",
-              tooltip: "Runs for 120 frames (2 seconds) instead of 1200 (20 seconds), recommended only if you have a very stable framerate",
-              patches: [{offset: 0x366E6C, off: [0xB0, 0x04], on: [0x78, 0x00]}]
+              patches: [{ offset: 0x37fe54, off: [0x3c, 0x0f], on: [0x08, 0x07] }],
             },
           ]),
         ]);
       });
     </script>
-</head>
-<body>
-<h1>IIDX ROOTAGE DLL Modder</h1>
-</body>
+  </head>
+  <body>
+    <h1>Beatmania IIDX Rootage</h1>
+  </body>
 </html>
