refactor: Add index backlinks

--- a/ballerz.html
+++ b/ballerz.html
@@ -208,6 +208,6 @@
     </script>
   </head>
   <body>
-    <h1>Beatmania IIDX 25 Cannon Ballers</h1>
+    <h1><a href="./index.html">Beatmania IIDX 25 Cannon Ballers</a></h1>
   </body>
 </html>
