--- a/heroicverse.html
+++ b/heroicverse.html
@@ -256,6 +256,6 @@
     </script>
   </head>
   <body>
-    <h1>Beatmania IIDX 27 Heroic Verse</h1>
+    <h1><a href="./index.html">Beatmania IIDX 27 Heroic Verse</a></h1>
   </body>
 </html>
