--- a/pendual.html
+++ b/pendual.html
@@ -96,6 +96,6 @@
         </script>
     </head>
     <body>
-        <h1>Beatmania IIDX 22 Pendual</h1>
+        <h1><a href="./index.html">Beatmania IIDX 22 Pendual</a></h1>
     </body>
 </html>
