--- a/resident.html
+++ b/resident.html
@@ -410,6 +410,6 @@
     </script>
   </head>
   <body>
-    <h1>Beatmania IIDX 30 Resident</h1>
+    <h1><a href="./index.html">Beatmania IIDX 30 Resident</a></h1>
   </body>
 </html>
