--- a/rootage.html
+++ b/rootage.html
@@ -144,6 +144,6 @@
     </script>
   </head>
   <body>
-    <h1>Beatmania IIDX Rootage</h1>
+    <h1><a href="./index.html">Beatmania IIDX Rootage</a></h1>
   </body>
 </html>
